# learning-bazel-with-go

./: .gitignore  .pre-commit-config.yaml  README.md  gen_readme.sh  gen_readme_index.sh
sampleBazel/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
sampleBazel10/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod
sampleBazel10/api/hello/v1/: BUILD.bazel  hello.proto
sampleBazel2/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
sampleBazel2/pkg/: BUILD.bazel  controller.go
sampleBazel2/pkg/log/: BUILD.bazel  log.go
sampleBazel3/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
sampleBazel3/pkg/: BUILD.bazel  controller.go
sampleBazel4/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
sampleBazel4/cmd/: BUILD.bazel  root.go  serve.go
sampleBazel4/pkg/: BUILD.bazel  service.go
sampleBazel5/: BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go
sampleBazel5/cmd/: BUILD.bazel  root.go  serve.go
sampleBazel5/config/: BUILD.bazel
sampleBazel5/pkg/: BUILD.bazel  service.go
sampleBazel6/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
sampleBazel6/api/: hello.pb.go  hello_grpc.pb.go
sampleBazel6/api/hello/v1/: BUILD.bazel  hello.pb.go  hello.proto  hello_grpc.pb.go
sampleBazel6/cmd/: BUILD.bazel  root.go  serve.go
sampleBazel6/config/: BUILD.bazel
sampleBazel6/pkg/: BUILD.bazel  controller.go  service.go
sampleBazel7/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  main.go
sampleBazel7/api/hello/v1/: BUILD.bazel  hello.pb.go  hello.proto
sampleBazel7/cmd/: BUILD.bazel  root.go  serve.go
sampleBazel7/config/: BUILD.bazel
sampleBazel7/pkg/: BUILD.bazel  controller.go  service.go
sampleBazel8/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  main.go
sampleBazel8/api/hello/v1/: BUILD.bazel  hello.pb.go  hello.proto  hello_grpc.pb.go
sampleBazel8/cmd/: BUILD.bazel  root.go  serve.go
sampleBazel8/config/: BUILD.bazel  config.go
sampleBazel8/pkg/: BUILD.bazel  controller.go  service.go
sampleBazel9/: BUILD.bazel  MODULE.bazel  Makefile  README.md  copy_proto_outputs.sh  go.mod  main.go
sampleBazel9/api/hello/v1/: BUILD.bazel  hello.proto  hello_test.go
