module(
    name = "sample_bazel_10",
    version = "1.0",
)

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "toolchains_protoc", version = "0.4.3")
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39")
bazel_dep(name = "googleapis-go", version = "1.0.0")
# 添加 gazelle 用于自动生成 BUILD 文件
bazel_dep(name = "gazelle", version = "0.44.0")


my_go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
my_go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")

protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.3",
)
