load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_binary(
    name = "sampleBazel3",
    embed = [":sampleBazel3_lib"],
    importpath = "github.com/wrallen/sampleBazel3",
    visibility = ["//visibility:public"],
)

go_library(
    name = "sampleBazel3_lib",
    srcs = ["main.go"],
    importpath = "github.com/wrallen/sampleBazel3",
    visibility = ["//visibility:private"],
    deps = ["//pkg"],
)
