# 本文件除了注释上标注的为手写外，其余都是自动生成
# 手写
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# 手写
gazelle(name = "gazelle")

go_library(
    name = "sampleBazel6_lib",
    srcs = ["main.go"],
    # 手写
    data = ["//config:all_configs"],
    importpath = "github.com/wrallen/sampleBazel6",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "sampleBazel6",
    embed = [":sampleBazel6_lib"],
    visibility = ["//visibility:public"],
)
