module(
    name = "sample_bazel_8",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")

# 添加和proto相关的
bazel_dep(name = "rules_proto", version = "7.1.0")

# 添加自动生成pb相关的protoc依赖
bazel_dep(name = "toolchains_protoc", version = "0.4.3")

my_go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
my_go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_spf13_cobra", "com_github_spf13_viper", "org_golang_google_grpc", "org_uber_go_zap")

# 使用protoc的扩展
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")

# 使用指定版本的protoc
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.3",
)
