module(
    name = "sample_bazel_9",
    version = "1.0",
)

# 添加和proto相关的
bazel_dep(name = "rules_proto", version = "7.1.0")

# 添加 Go 规则用于生成 gRPC 代码
bazel_dep(name = "rules_go", version = "0.55.1")

# 添加自动生成pb相关的protoc依赖
bazel_dep(name = "toolchains_protoc", version = "0.4.3")

# 添加 protobuf 依赖 这里这个就是proto里面用到的timestamp/empty的依赖
bazel_dep(name = "protobuf", version = "29.1")

# 添加 googleapis 依赖，用于 google/api/annotations.proto
bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39")
bazel_dep(name = "googleapis-go", version = "1.0.0")

# 使用protoc的扩展
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")

# 使用指定版本的protoc
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.3",
)
