# 本文件所有内容由gazelle自动生成
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pkg",
    srcs = ["service.go"],
    importpath = "github.com/wrallen/sampleBazel4/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
