load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/wrallen/sampleBazel5/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_viper//:viper"],
)

# 手写
# 通过这个方法来声明文件相关的，filegroup是Bazel中最简单最通用的“文件聚合器”
# 作为：创建一组文件供其他目标依赖，使用，但是自己不会参于
filegroup(
    name = "all_configs",
    srcs = glob(["*.yaml"]),
    visibility = ["//visibility:public"],
)
