load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "serve.go",
    ],
    importpath = "github.com/wrallen/sampleBazel6/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//pkg",
        "@com_github_spf13_cobra//:cobra",
    ],
)
