load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "api_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:api_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "api_go_proto",
    # 手动修改
    compilers = ["@rules_go//proto:go_grpc_v2"],
    importpath = "github.com/wrallen/sampleBazel10/api/hello/v1",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//google/api:annotations_proto",
        "//google/api:field_behavior_proto",
    ],
)

go_library(
    name = "hello",
    embed = [":api_go_proto"],
    importpath = "github.com/wrallen/sampleBazel10/api/hello/v1",
    visibility = ["//visibility:public"],
)


